--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -49,7 +49,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           # Upload the build output directory
-          path: './build'
+          path: './dist'
 
       - name: Deploy to GitHub Pages
         id: deployment
